tests/parsing/smtlib/mcil/errors/233_define-system_bad_attribute_7.expected
File "tests/parsing/smtlib/mcil/errors/233_define-system_bad_attribute_7.mcil", line 1, character 35-36:
1 | (define-system sys :subsys (a (b)) _)
                                       ^
Error while parsing a system definition, read the reserved word '_',
      but expected an attribute from the set (:input, :output, :local,
      :subsys, :init, :inv) or a closing parenthesis.
